--- a/all.html
+++ b/all.html
@@ -10,7 +10,7 @@
             </style>
     </head>
     <body>
-        <!--charset utf8 meta-->
+        <!--charset utf8 meta test-->
         To display an HTML page correctly, a web browser must know which character set to use.
         <!--entities & symboll &emogi for utf8 in meta (we can use from w3school)-->
         
