--- a/all.html
+++ b/all.html
@@ -12,7 +12,7 @@
     <body>
         <!--charset ok test utf8 meta xxxxx-->
         To display an HTML page correctly, a web browser must know which character set to use.
-        <!--entities & symboll &emogi for utf8 in meta (we can use from w3school)-->
+        <!--entities & symboll &emogi for utf8 in meta (we can use from w3school)--rdcfgv>
         
         Mark	Character	Construct	Result
          ̀	        a	      a&#768;	    à	
